Исправление бага с библиотекой axios

--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
       </ul>
       <button class="btn btn-primary" id="form_button">Button</button>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
     <script>
       const button = document.getElementById("form_button");
       const merchantId = document.getElementById("merchantId");
